--- a/ToDo.txt
+++ b/ToDo.txt
@@ -8,5 +8,7 @@ C	2127	Ir ao shopping
 C	3667	COmprar açai
 C	8315	Ir ao parque
 E	5893	Festa fantasia
-A	2379	Shoppe
-A	8840	petshop
+C	2379	Shoppe
+A	8840	Cortar o cabelo
+A	3737	Plantar mandioca
+E	8564	Colher amendoin
